@@ -1,0 +1,43 @@
+<!--
+  Copyright (c) 2016-2018 Martin Donath <martin.donath@squidfunk.com>
+
+  Permission is hereby granted, free of charge, to any person obtaining a copy
+  of this software and associated documentation files (the "Software"), to
+  deal in the Software without restriction, including without limitation the
+  rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
+  sell copies of the Software, and to permit persons to whom the Software is
+  furnished to do so, subject to the following conditions:
+
+  The above copyright notice and this permission notice shall be included in
+  all copies or substantial portions of the Software.
+
+  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+  FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
+  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+  FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
+  IN THE SOFTWARE.
+-->
+
+<!-- Translations: Chinese (Taiwanese) -->
+{% macro t(key) %}{{ {
+  "language": "zh-Hant",
+  "clipboard.copy": "複製",
+  "clipboard.copied": "已複製",
+  "edit.link.title": "編輯此頁",
+  "footer.previous": "上一頁",
+  "footer.next": "下一頁",
+  "meta.comments": "留言",
+  "meta.source": "來源",
+  "search.language": "jp",
+  "search.placeholder": "搜尋",
+  "search.result.placeholder": "打字進行搜尋",
+  "search.result.none": "沒有符合的項目",
+  "search.result.one": "找到 1 個符合的項目",
+  "search.result.other": "找到 # 個符合的項目",
+  "search.tokenizer": "[\，\。]+",
+  "skip.link.title": "跳轉到",
+  "source.link.title": "前往倉庫",
+  "toc.title": "本頁目錄"
+}[key] }}{% endmacro %}
